--- a/booking.html
+++ b/booking.html
@@ -11,49 +11,47 @@
   <script src="https://kit.fontawesome.com/616b3ef0e6.js" crossorigin="anonymous"></script>
 </head>
 
-
 <body>
   <!-- Header -->
   <header class="header">
     <div class="row header-row">
       <div class="col-6 col-md-3 header-logo">
-        <a href="index.html">SNAZZY PAWS GROOMING</a>
+        <a href="index.html" aria-label="Snazzy Paws Grooming Home">SNAZZY PAWS GROOMING</a>
       </div>
-    <nav class="col-md-6 desktop-nav" aria-label="Main navigation">
-      <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+      <nav class="col-md-6 desktop-nav" aria-label="Main navigation">
+        <ul>
+          <li><a class="active" href="index.html" aria-current="page">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
       <div class="col-4 col-md-3 header-end">
-        <span class="opening-times">Opening Hours:<br> 9:00–5:00</span>
+        <span class="opening-times" aria-label="Opening Hours">Opening Hours:<br> 9:00–5:00</span>
       </div>
-
       <div class="col-2 header-hamburger">
-        <button id="hamburger" aria-label="Open navigation">
+        <button id="hamburger" aria-label="Open navigation menu" aria-controls="mobile-nav" aria-expanded="false">
           <span class="hamburger-bar"></span>
           <span class="hamburger-bar"></span>
           <span class="hamburger-bar"></span>
         </button>
       </div>
     </div>
-    <nav id="mobile-nav" class="mobile-nav" aria-label="Main navigation">
+    <nav id="mobile-nav" class="mobile-nav" aria-label="Mobile main navigation" hidden>
       <div class="mobile-nav-header">
         <div class="header-logo">
           <span>SNAZZY PAWS GROOMING</span>
         </div>
-        <button id="close-nav" class="close-nav" aria-label="Close navigation">&times;</button>
+        <button id="close-nav" class="close-nav" aria-label="Close navigation menu" aria-controls="mobile-nav">&times;</button>
       </div>
       <ul class="col-12">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" aria-current="page">Home</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a class="active" href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-      <div  class="mobile-nav-footer">
-        <span class="opening-times">Opening Hours: 9:00AM – 5:00PM</span>
+      <div class="mobile-nav-footer">
+        <span class="opening-times" aria-label="Opening Hours">Opening Hours: 9:00AM – 5:00PM</span>
       </div>
     </nav>
   </header>
@@ -65,49 +63,49 @@
       <div class="row">
         <!--Booking Form -->
         <div class="col-12 col-md-7 booking-form-container">
-          <form id="booking-form" autocomplete="off" novalidate>
+          <form id="booking-form" autocomplete="off" novalidate aria-label="Booking form">
             <div class="booking-form-heading">CONTACT INFORMATION</div>
             <div class="booking-form-row">
               <div class="booking-form-group">
-                <label for="firstName">First Name *</label>
-                <input type="text" id="firstName" name="firstName" required autocomplete="given-name">
+                <label for="firstName">First Name <span aria-hidden="true">*</span></label>
+                <input type="text" id="firstName" name="firstName" required aria-required="true" autocomplete="given-name">
               </div>
               <div class="booking-form-group">
-                <label for="lastName">Last Name *</label>
-                <input type="text" id="lastName" name="lastName" required autocomplete="family-name">
-              </div>
-            </div>
-            <div class="booking-form-row">
-              <div class="booking-form-group">
-                <label for="email">Email Address *</label>
-                <input type="email" id="email" name="email" required autocomplete="email">
+                <label for="lastName">Last Name <span aria-hidden="true">*</span></label>
+                <input type="text" id="lastName" name="lastName" required aria-required="true" autocomplete="family-name">
               </div>
             </div>
             <div class="booking-form-row">
               <div class="booking-form-group">
-                <label for="mobile">Mobile Number *</label>
-                <input type="tel" id="mobile" name="mobile" required autocomplete="tel">
+                <label for="email">Email Address <span aria-hidden="true">*</span></label>
+                <input type="email" id="email" name="email" required aria-required="true" autocomplete="email">
+              </div>
+            </div>
+            <div class="booking-form-row">
+              <div class="booking-form-group">
+                <label for="mobile">Mobile Number <span aria-hidden="true">*</span></label>
+                <input type="tel" id="mobile" name="mobile" required aria-required="true" autocomplete="tel">
               </div>
             </div>
             <div class="booking-form-heading" style="margin-top:2rem;">YOUR DOG</div>
             <div class="booking-form-row">
               <div class="booking-form-group">
-                <label for="datetime">Preferred Date &amp; Time *</label>
-                <input type="datetime-local" id="datetime" name="datetime" required>
+                <label for="datetime">Preferred Date &amp; Time <span aria-hidden="true">*</span></label>
+                <input type="datetime-local" id="datetime" name="datetime" required aria-required="true">
               </div>
             </div>
             <div class="booking-form-row">
               <div class="booking-form-group">
-                <label for="dogName">Dog's Name *</label>
-                <input type="text" id="dogName" name="dogName" required>
+                <label for="dogName">Dog's Name <span aria-hidden="true">*</span></label>
+                <input type="text" id="dogName" name="dogName" required aria-required="true">
               </div>
               <div class="booking-form-group">
-                <label for="dogAge">Age *</label>
-                <input type="number" id="dogAge" name="dogAge" min="0" max="30" required>
+                <label for="dogAge">Age <span aria-hidden="true">*</span></label>
+                <input type="number" id="dogAge" name="dogAge" min="0" max="30" required aria-required="true">
               </div>
               <div class="booking-form-group">
-                <label for="dogBreed">Breed *</label>
-                <input type="text" id="dogBreed" name="dogBreed" required>
+                <label for="dogBreed">Breed <span aria-hidden="true">*</span></label>
+                <input type="text" id="dogBreed" name="dogBreed" required aria-required="true">
               </div>
             </div>
             <div class="booking-form-row">
@@ -121,74 +119,74 @@
               By submitting this booking request, you agree to our cancellation policy and confirm that your dog is up to date with vaccinations. Bookings are requests only and will be confirmed by our team.
             </p>
             <div class="terms-checkbox">
-              <input type="checkbox" id="agreeTerms" name="agreeTerms" required>
-              <label for="agreeTerms">I agree to the terms and conditions *</label>
+              <input type="checkbox" id="agreeTerms" name="agreeTerms" required aria-required="true">
+              <label for="agreeTerms">I agree to the terms and conditions <span aria-hidden="true">*</span></label>
             </div>
           </form>
         </div>
         <!-- Treatment Summary -->
         <div class="col-12 col-md-5 booking-summary">
-          <img src="img/hero.jpg" alt="Spa Package" class="booking-summary-img">
+          <img src="img/hero.jpg" alt="Dog enjoying a spa package at Snazzy Paws Grooming" class="booking-summary-img">
           <h3 class="booking-summary-title">Spa Package</h3>
           <p class="booking-summary-desc">
             Bath, haircut, teeth brushing, nail trim and sometimes special scents or conditioners.
           </p>
-          <button type="submit" form="booking-form" class="btn">Submit Booking Request</button>
+          <button type="submit" form="booking-form" class="btn" aria-label="Submit booking request">Submit Booking Request</button>
         </div>
       </div>
     </section>
   </main>
 
-
-<!-- Footer -->
+  <!-- Footer -->
   <footer class="site-footer">
-  <div class="container">
-    <div class="row footer-top">
-      <div class="col-12 col-md-6 footer-col footer-col-left">
-        <div class="footer-sitemap">
-          <h2>SITEMAP</h2>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
+    <div class="container">
+      <div class="row footer-top">
+        <div class="col-12 col-md-6 footer-col footer-col-left">
+          <div class="footer-sitemap">
+            <h2>SITEMAP</h2>
+            <ul>
+              <li><a href="index.html" aria-current="page">Home</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="footer-contact">
+            <h2>CONTACT US</h2>
+            <p>Snazzy Paws Grooming</p>
+            <p>Phone: <a href="tel:+6431234567">+64 3 123 4567</a></p>
+            <p>Freephone: <a href="tel:0800762999">0800 762 999</a></p>
+            <p>Email: <a href="mailto:info@snazzypaws.co.nz">info@snazzypaws.co.nz</a></p>
+          </div>
         </div>
-        <div class="footer-contact">
-          <h2>CONTACT US</h2>
-          <p>Snazzy Paws Grooming</p>
-          <p>Phone: <a href="tel:+6431234567">+64 3 123 4567</a></p>
-          <p>Freephone: <a href="tel:0800762999">0800 762 999</a></p>
-          <p>Email: <a href="mailto:info@snazzypaws.co.nz">info@snazzypaws.co.nz</a></p>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 footer-col footer-col-right">
-        <div class="footer-map">
-          <iframe
-            src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
-            style="border:0;"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
-        </div>
-        <div class="footer-address">
-          <h2>OUR LOCATION</h2>
-          <p>Snazzy Paws Grooming</p>
-          <p>5 Papanui Road, Christchurch, New Zealand</p>
+        <div class="col-12 col-md-6 footer-col footer-col-right">
+          <div class="footer-map">
+            <iframe
+              src="https://www.google.com/maps?q=5+Papanui+Road,+Christchurch,+New+Zealand&output=embed"
+              style="border:0;"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+              title="Map showing location of Snazzy Paws Grooming, 5 Papanui Road, Christchurch, New Zealand">
+            </iframe>
+          </div>
+          <div class="footer-address">
+            <h2>OUR LOCATION</h2>
+            <p>Snazzy Paws Grooming</p>
+            <p>5 Papanui Road, Christchurch, New Zealand</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="footer-socials-section">
-    <h2>CONNECT WITH US</h2>
-    <div class="footer-socials">
-      <a href="https://www.facebook.com/SnazzyPawsGrooming" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-      <a href="https://www.instagram.com/SnazzyPawsGrooming" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://www.twitter.com/SnazzyPawsGrooming" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
-      <p class="footer-hours">Opening Hours<br>9:00AM – 5:00PM</p>
+    <div class="footer-socials-section">
+      <h2>CONNECT WITH US</h2>
+      <div class="footer-socials" aria-label="Social media links">
+        <a href="https://www.facebook.com/SnazzyPawsGrooming" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/SnazzyPawsGrooming" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.twitter.com/SnazzyPawsGrooming" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a>
+        <p class="footer-hours">Opening Hours<br>9:00AM – 5:00PM</p>
+      </div>
     </div>
-  </div>
   </footer>
 </body>
 </html>
